# qt-e2e-driver

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
docs/: AI_INTEGRATION_PLAYBOOK.md  ALIAS_REGISTRY.md  INTEGRATION.md  PROTOCOL.md  QT_ADAPTER.md
docs/recipes/: cmake.md  qmake.md  visual-studio.md
docs/superpowers/plans/: 2026-06-12-qt-e2e-driver-mvp.md
examples/python/: test_login_smoke.py
examples/qt_compile_smoke/: main.cpp  qt_compile_smoke.pro
harness/project/: profile.md
harness/project/operations/ai-integration-kit/: current-initiative.md  hardening-design.md  initiative-board.md  initiative-decisions.md  initiative-matrix.md
harness/project/rules/: ai-integration-kit.md  protocol-contract.md  qt-adapter-boundary.md
include/qt_e2e_driver/: AliasRegistry.h  TestServer.h
src/qt/: AliasRegistry.cpp  TestServer.cpp
src/qt_e2e_driver/: __init__.py  catalog.py  client.py  doctor.py  errors.py  scanner.py
tests/: test_catalog.py  test_client.py  test_docs_integration_kit.py  test_doctor.py  test_qt_adapter_contract.py  test_qt_compile_smoke_fixture.py  test_qt_test_server_contract.py  test_scanner.py
